[gd_scene load_steps=29 format=2]

[ext_resource path="res://Calendar/CustomStyles/Lines/HLines_Hour.tres" type="StyleBox" id=1]
[ext_resource path="res://Calendar/CustomStyles/FontMediumBaisc.tres" type="DynamicFont" id=2]
[ext_resource path="res://Calendar/AddEventPopup/AddEventPopup.gd" type="Script" id=3]
[ext_resource path="res://Fonts/JetBrainsMono-Medium.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.960784, 0.960784, 0.960784, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.6, 0.6, 0.6, 1 )
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.960784, 0.960784, 0.960784, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.6, 0.6, 0.6, 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.960784, 0.960784, 0.960784, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.6, 0.6, 0.6, 1 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="DynamicFont" id=9]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.960784, 0.960784, 0.960784, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.6, 0.6, 0.6, 1 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="DynamicFont" id=12]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.960784, 0.960784, 0.960784, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.6, 0.6, 0.6, 1 )

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="DynamicFont" id=15]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.960784, 0.960784, 0.960784, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.6, 0.6, 0.6, 1 )

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="DynamicFont" id=18]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.960784, 0.960784, 0.960784, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.6, 0.6, 0.6, 1 )

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="DynamicFont" id=21]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.960784, 0.960784, 0.960784, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.6, 0.6, 0.6, 1 )

[sub_resource type="StyleBoxEmpty" id=23]

[sub_resource type="DynamicFont" id=24]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[node name="Popup" type="Popup"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 3 )

[node name="AddEventPopup" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0, 0, 0, 0.2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -300.0
margin_right = 300.0
margin_bottom = 300.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer"]
margin_right = 600.0
margin_bottom = 43.0
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.301961, 0.301961, 0.301961, 1 )
placeholder_text = "Event Title"
placeholder_alpha = 0.4

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 58.0
margin_right = 600.0
margin_bottom = 62.0
custom_styles/separator = ExtResource( 1 )

[node name="DateHBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 77.0
margin_right = 600.0
margin_bottom = 124.0
custom_constants/separation = 10

[node name="DateLabel" type="Label" parent="Panel/VBoxContainer/DateHBoxContainer"]
margin_top = 2.0
margin_right = 95.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.301961, 0.301961, 0.301961, 1 )
text = "Date:"
uppercase = true

[node name="MonthOptionButton" type="OptionButton" parent="Panel/VBoxContainer/DateHBoxContainer"]
margin_left = 105.0
margin_right = 215.0
margin_bottom = 47.0
rect_min_size = Vector2( 110, 47 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_colors/font_color_hover = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_pressed = Color( 0.301961, 0.301961, 0.301961, 1 )
text = "Month"
flat = true
clip_text = true

[node name="DayOptionButton" type="OptionButton" parent="Panel/VBoxContainer/DateHBoxContainer"]
margin_left = 225.0
margin_right = 300.0
margin_bottom = 47.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_colors/font_color_hover = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_pressed = Color( 0.301961, 0.301961, 0.301961, 1 )
text = "Day"
flat = true

[node name="YearOptionButton" type="OptionButton" parent="Panel/VBoxContainer/DateHBoxContainer"]
margin_left = 310.0
margin_right = 404.0
margin_bottom = 47.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_colors/font_color_hover = Color( 0.960784, 0.960784, 0.960784, 1 )
custom_colors/font_color_pressed = Color( 0.301961, 0.301961, 0.301961, 1 )
text = "Year"
flat = true

[node name="StartTimeHBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 139.0
margin_right = 600.0
margin_bottom = 186.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="Panel/VBoxContainer/StartTimeHBoxContainer"]
margin_top = 2.0
margin_right = 209.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.301961, 0.301961, 0.301961, 1 )
text = "Start time:"
uppercase = true

[node name="HourOptionButton" type="OptionButton" parent="Panel/VBoxContainer/StartTimeHBoxContainer"]
margin_left = 219.0
margin_right = 256.0
margin_bottom = 47.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_colors/font_color_hover = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_pressed = Color( 0.301961, 0.301961, 0.301961, 1 )
text = "6"
flat = true

[node name="MinuteOptionButton" type="OptionButton" parent="Panel/VBoxContainer/StartTimeHBoxContainer"]
margin_left = 266.0
margin_right = 322.0
margin_bottom = 47.0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_colors/font_color_hover = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_pressed = Color( 0.301961, 0.301961, 0.301961, 1 )
text = "00"
flat = true

[node name="AMPMOptionButton" type="OptionButton" parent="Panel/VBoxContainer/StartTimeHBoxContainer"]
margin_left = 332.0
margin_right = 388.0
margin_bottom = 47.0
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 14 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 13 )
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_colors/font_color_hover = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_pressed = Color( 0.301961, 0.301961, 0.301961, 1 )
text = "AM"
flat = true

[node name="EndTimeHBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 201.0
margin_right = 600.0
margin_bottom = 248.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="Panel/VBoxContainer/EndTimeHBoxContainer"]
margin_top = 2.0
margin_right = 171.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.301961, 0.301961, 0.301961, 1 )
text = "end time:"
uppercase = true

[node name="HourOptionButton" type="OptionButton" parent="Panel/VBoxContainer/EndTimeHBoxContainer"]
margin_left = 181.0
margin_right = 218.0
margin_bottom = 47.0
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 17 )
custom_styles/disabled = SubResource( 16 )
custom_styles/normal = SubResource( 16 )
custom_fonts/font = SubResource( 18 )
custom_colors/font_color = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_colors/font_color_hover = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_pressed = Color( 0.301961, 0.301961, 0.301961, 1 )
text = "7"
flat = true

[node name="MinuteOptionButton" type="OptionButton" parent="Panel/VBoxContainer/EndTimeHBoxContainer"]
margin_left = 228.0
margin_right = 284.0
margin_bottom = 47.0
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 19 )
custom_styles/focus = SubResource( 20 )
custom_styles/disabled = SubResource( 19 )
custom_styles/normal = SubResource( 19 )
custom_fonts/font = SubResource( 21 )
custom_colors/font_color = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_colors/font_color_hover = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_pressed = Color( 0.301961, 0.301961, 0.301961, 1 )
text = "00"
flat = true

[node name="AMPMOptionButton" type="OptionButton" parent="Panel/VBoxContainer/EndTimeHBoxContainer"]
margin_left = 294.0
margin_right = 350.0
margin_bottom = 47.0
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 22 )
custom_styles/focus = SubResource( 23 )
custom_styles/disabled = SubResource( 22 )
custom_styles/normal = SubResource( 22 )
custom_fonts/font = SubResource( 24 )
custom_colors/font_color = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_colors/font_color_hover = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_pressed = Color( 0.301961, 0.301961, 0.301961, 1 )
text = "AM"
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 263.0
margin_right = 600.0
margin_bottom = 312.0

[node name="CancelButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_right = 298.0
margin_bottom = 49.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.6, 0.6, 0.6, 1 )
text = "Cancel"
flat = true
align = 0

[node name="CreateEventButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 302.0
margin_right = 600.0
margin_bottom = 49.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.6, 0.6, 0.6, 1 )
text = "Create Event"
flat = true
align = 2

[connection signal="about_to_show" from="." to="." method="_on_Popup_about_to_show"]
